gap css bug fixed in pagination

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -104,3 +104,11 @@ body { padding-top: 60px; }
   -moz-border-radius-bottomright: 4px;
   border-bottom-right-radius: 4px;
 }
+span.gap{
+  float: left;
+  margin: 0px 15px;
+  padding-top: 10px
+}
+.gap + a{
+  border-left-width: 1px;
+}
